profile-setup croppie fixed

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -265,6 +265,11 @@ margin:20px;
   justify-content: center;
   align-items: center;
 }
+
+.setup-container{
+  margin-top: 20vh;
+}
+
 #profile-pic{
   width:100%;
   display: flex;
@@ -591,4 +596,8 @@ margin:20px;
 .clicked{
   color: rgb(55, 128, 177);
 }
+
+
+
+
 
